fixed footer on mobile

--- a/static/main.css
+++ b/static/main.css
@@ -152,6 +152,17 @@ footer {
     display: flex;
     flex-direction: row;
 }
+
+@media only screen and (max-width: 820px) {
+  footer {
+    flex-wrap: wrap-reverse;
+  }
+  footer div.footer div.logo {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 footer div.footer {
     flex-grow: 2;
 }
